@@ -1,3 +1,9 @@
+2007-01-15  Kyle Galloway  <kgallowa@redhat.com>
+
+	* gnu/classpath/jdwp/exception/TypeMismatchException.java: New file.
+	* gnu/classpath/jdwp/exception/InvalidFrameException.java: Fix indentation.
+	* gnu/classpath/jdwp/exception/InvalidSlotException.java: Fix indentation.
+
 2007-01-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/AttributeValueExp.java:
